2008-03-21 mentaer <sstein@geo.unizh.ch>
	  replaced JTS version 1.72 by 1.9
	  this required to change as well a classpath in 
	  com.vividsolutions.jump.geom.EnvelopeIntersector 
	  
2008-03-21 mentaer <sstein@geo.unizh.ch>
	  set OJ version to 1.2F to better distinguish bug reports 

2008-03-21 mentaer <sstein@geo.unizh.ch>
      src/com/vividsolutions/jump/workbench/JUMPConfiguration.java:
	  removed WMSQueryPlugIn and AddDatastoreLayerPlugIn from context 
	  menu as those can be called now from new open menu.


2008-03-21 mentaer <sstein@geo.unizh.ch>
      src/org/openjump/core/ui/plugin/edit/CopyBBoxPlugin.java:
      changed the string output to the clipboard according to Jukka's suggestions   
      
2008-03-21 mentaer <sstein@geo.unizh.ch>
      Replaced old PostgreSQL driver (v.2) by newer Version 3.0 
      in OpenJUMP/lib/ directory  
      
2008-03-13 mentaer <sstein@geo.unizh.ch>
      src/com/vividsolutions/jump/workbench/plugin/EnableCheckFactory.java
      Fixed bug of non-activation of Item-Info-Button in Attribute Table,
      and non-activation of attribute mouse menu items.
      Error is in SelectionManager.getSelectedItemsCount() but the problem is
      resolved by a work around in EnableCheckFactory  

2008-03-11 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/XSLUtility.java:
      Fixed bug when exporting svg symbols via menu item.

2008-02-28 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java,
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
      Fixed some issues with the importer and color theming styles,
      made the exported SLD more robust against geometry types.

2008-03-09 mentaer <sstein@geo.unizh.ch>
	  renamed CutPolygonPlugIn to SplitPolygonPlugIn 
	  added CutPolygon PlugIn from SIGLE
	  Adding  src/org/openjump/core/ui/plugin/edittoolbox/CutPolygonSIGLEPlugIn.java