@@ -124,7 +124,7 @@ datasource.LoadDatasetPlugIn.see-view-log = See View / Log For Stack Traces
 datasource.SaveDatasetAsFilePlugIn.save-dataset-as-file = Save Dataset As File
 datasource.SaveDatasetAsPlugIn.saving = Saving
 deejump.plugin.SaveLegendPlugIn.Save = Save
-deejump.plugin.SaveLegendPlugIn.Save-legend = Save legend.
+deejump.plugin.SaveLegendPlugIn.Save-legend = Save legend
 deejump.plugin.SaveLegendPlugIn.Save-legend-as-image-png = Save legend as image (PNG).
 deejump.pluging.manager.ExtensionHelper.deleted = Deleted
 deejump.pluging.manager.ExtensionHelper.Deleting-file = Deleting File
